# django-boilerplate-with-mypy

./: ReadMe.md  pyproject.toml
dockerfiles/: .Dockerfile  .mypy.Dockerfile
src/sample/sample/: settings.py
